--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -67,11 +67,8 @@ jobs:
           fail_on_error: true
 
       - name: Terraform Security Scan (tfsec)
-        uses: aquasecurity/tfsec-action@v1.0.0
-        with:
-          fail_on_error: true
-          format: github-actions
-          severity: medium
+        uses: triat/terraform-security-scan@v3
+
 
       - name: Terraform Plan
         run: terraform plan -var-file="${{ inputs.tfvars }}" -out=plan.tfplan
@@ -81,6 +78,19 @@ jobs:
         run: |
           curl -L -o opa https://openpolicyagent.org/downloads/latest/opa_linux_amd64
           chmod +x opa
+          result=$(opa eval --input terraform.plan.json --data .github/workflows/terraform_tag.rego "data.terraform.validation")
+          echo $result
+          violations=$(echo "$result" | jq '.result[0].expressions[0].value.deny | length')
+          echo $violations
+
+          if [ "$violations" -gt 0 ]; then
+            echo "❌ Policy violations detected:"
+            echo "$result" | jq -r '.result[0].expressions[0].value.deny[]'
+            exit 1
+          else
+            echo "✅ No policy violations detected!"
+          fi
+
           ./opa eval --input terraform.plan.json --data opa/ "data.terraform.deny"
 
       - name: Terraform Apply
