--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -68,6 +68,7 @@ jobs:
 
       - name: Terraform Security Scan (tfsec)
         uses: triat/terraform-security-scan@v3
+        continue-on-error: true
 
 
       - name: Terraform Plan
