--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -117,6 +117,9 @@ jobs:
     runs-on: ubuntu-latest
     if: always()  # <-- This ensures it runs even if terraform job fails
     needs: terraform
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
