--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -66,9 +66,9 @@ jobs:
           reporter: github-check
           fail_on_error: true
 
-      - name: Terraform Security Scan (tfsec)
-        uses: triat/terraform-security-scan@v3
-        continue-on-error: true
+      # - name: Terraform Security Scan (tfsec)
+      #   uses: triat/terraform-security-scan@v3
+      #   continue-on-error: true
 
       - id: install-aws-cli
         uses: unfor19/install-aws-cli-action@v1
@@ -93,7 +93,8 @@ jobs:
         run: |
           curl -L -o opa https://openpolicyagent.org/downloads/latest/opa_linux_amd64
           chmod +x opa
-          result=$(opa eval --input terraform.plan.json --data .github/workflows/terraform_tag.rego "data.terraform.validation")
+          mv opa /usr/local/bin/
+          result=$(./opa eval --input terraform.plan.json --data .github/workflows/terraform_tag.rego "data.terraform.validation")
           echo $result
           violations=$(echo "$result" | jq '.result[0].expressions[0].value.deny | length')
           echo $violations
