--- a/.github/workflows/terraform_destroy.yml
+++ b/.github/workflows/terraform_destroy.yml
@@ -57,7 +57,7 @@ jobs:
         run: terraform plan -var-file=terraform.${{ github.event.inputs.environment }}.tfvars -out=plan.tfplan
 
       - name: Terraform Destroy
-        run: terraform apply -auto-approve plan.tfplan
+        run: terraform destroy -auto-approve plan.tfplan
         
 
   unlock-state:
