--- a/.github/workflows/terraform_destroy.yml
+++ b/.github/workflows/terraform_destroy.yml
@@ -54,10 +54,10 @@ jobs:
           done
 
       - name: Terraform Plan
-        run: terraform plan -var-file=terraform.${{ github.event.inputs.environment }}.tfvars -out=plan.tfplan
+        run: terraform plan -var-file=terraform.${{ github.event.inputs.environment }}.tfvars -destroy
 
       - name: Terraform Destroy
-        run: terraform destroy -auto-approve plan.tfplan
+        run: terraform apply -destroy -auto-approve
         
 
   unlock-state:
