--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -58,8 +58,8 @@ jobs:
       # - name: Terraform Format Check (fmt)
       #   run: terraform fmt -check -recursive
 
-      # - name: Terraform Init
-      #   run: terraform init -backend-config="${{ inputs.backend_config }}" -backend-config="key=state/${{ github.repository }}-terraform.tfstate"
+      - name: Terraform Init
+        run: terraform init -backend-config="${{ inputs.backend_config }}" -backend-config="key=state/${{ github.repository }}-terraform.tfstate"
 
       # - name: Terraform Validate
       #   run: terraform validate
@@ -121,7 +121,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: terraform-plan-${{ inputs.environment }}
-          
+
       - name: Terraform Apply
         if: ${{ inputs.apply }}
         run: terraform apply -auto-approve plan.tfplan
