--- a/.github/workflows/terraform_destroy.yml
+++ b/.github/workflows/terraform_destroy.yml
@@ -74,17 +74,13 @@ jobs:
           role-to-assume: arn:aws:iam::140023376669:role/cmrs-DEV-TH-custom-GithubOIDCRole
           aws-region: ap-southeast-7
 
-      - name: Remove DynamoDB Lock
+      - name: Remove Terraform Lock
         env:
           AWS_REGION: ap-southeast-7
         run: |
-          # Replace with your actual LockID and table name
-          LOCK_ID="terraform-state-140023376669/state/${{ github.repository }}-terraform.tfstate"
-          TABLE_NAME="tterraform-state-140023376669"
+          LOCK_ID="terraform-state-140023376669/state/${{ github.repository }}-terraform.tfstate.tflock"
 
           echo "Checking for lock ID: $LOCK_ID in $TABLE_NAME"
-          aws dynamodb delete-item \
-            --table-name "$TABLE_NAME" \
-            --key "{\"LockID\": {\"S\": \"$LOCK_ID\"}}" \
+          aws s3 rm s3://$LOCK_ID \
             --region "$AWS_REGION" \
             || echo "No lock found or already removed"
