--- a/.github/workflows/terraform_destroy.yml
+++ b/.github/workflows/terraform_destroy.yml
@@ -14,11 +14,15 @@ on:
           - prod
 
 jobs:
-  destroy:
+  destroy-plan:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
+    concurrency:
+      #group: deploy-${{ github.job }}-${{ inputs.environment }}
+      group: ${{ github.workflow }}-${{ github.ref }}-${{ inputs.environment }}
+      cancel-in-progress: true
     steps:
       - name: Print selected environment
         run: |
@@ -54,10 +58,55 @@ jobs:
           done
 
       - name: Terraform Plan
-        run: terraform plan -var-file=terraform.${{ github.event.inputs.environment }}.tfvars -destroy
+        run: terraform plan -var-file=terraform.${{ github.event.inputs.environment }}.tfvars -destroy -out=tfdestroy.plan | tee tfplan.txt
+
+      - name: Print Terraform summary
+        uses: sgametrio/terraform-summary-action@main
+        with:
+          log-file: tfplan.txt
+          # Optional
+          title: Terraform Destroy Plan Summary
+
+      - name: Upload plan artifact
+        if: ${{ inputs.apply }}
+        uses: actions/upload-artifact@v4
+        with:
+            name: terraform-destroy-plan-${{ inputs.environment }}
+            path: tfdestroy.plan
+
+  destroy-apply:
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
+    environment: ${{ inputs.environment }}
+    concurrency:
+      #group: deploy-${{ github.job }}-${{ inputs.environment }}
+      group: ${{ github.workflow }}-${{ github.ref }}-${{ inputs.environment }}
+      cancel-in-progress: false
+    steps:
+      - name: Print selected environment
+        run: |
+          echo "Running for environment: ${{ github.event.inputs.environment }}"
+
+      - uses: actions/checkout@v3
+      - uses: hashicorp/setup-terraform@v3
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: arn:aws:iam::140023376669:role/cmrs-DEV-TH-custom-GithubOIDCRole
+          aws-region: ap-southeast-7
+    
+      - name: Terraform Init
+        run: terraform init -backend-config=backend.${{ github.event.inputs.environment }}.hcl -backend-config="key=state/${{ github.repository }}-terraform.tfstate"
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: terraform-destroy-plan-${{ inputs.environment }}
 
       - name: Terraform Destroy
-        run: terraform apply -destroy -auto-approve
+        run: terraform apply -auto-approve tfdestroy.plan
         
 
   unlock-state:
