--- a/.github/workflows/terraform_destroy.yml
+++ b/.github/workflows/terraform_destroy.yml
@@ -76,6 +76,7 @@ jobs:
 
   destroy-apply:
     runs-on: ubuntu-latest
+    needs: destroy-plan
     permissions:
       id-token: write
       contents: read
@@ -112,7 +113,7 @@ jobs:
   unlock-state:
     runs-on: ubuntu-latest
     if: always()  # <-- This ensures it runs even if terraform job fails
-    needs: destroy
+    needs: [destroy-plan,destroy-apply]
     permissions:
       id-token: write
       contents: read
